# Principle-of-software

./: .gitignore  LICENSE
Altimeter(Android OS)/Version1.0/: settings.gradle
Altimeter(Android OS)/Version1.0/app/: build.gradle
Altimeter(Android OS)/Version2.0/: local.properties  settings.gradle
Altimeter(Android OS)/Version3.0/P2/: test.yml
Altimeter(AndroidOS)/Version1.0/: README.md  TESTING.md  local.properties
Altimeter(AndroidOS)/Version2.0/: README.md
Altimeter(AndroidOS)/Version2.0/app/: build.gradle
Altimeter(AndroidOS)/Version3.0/: local.properties
BridgeGame/: README.md  Roles.md  participants.md
BridgeGame/Backend/ContractBridge/: build.gradle  settings.gradle
BridgeGame/Frontend/showAcard/: index.html  index.js  style.css
BridgeGame/Frontend/showAtrick/: index.html  index.js  style.css
BridgeGame/Frontend/showPlayerHand/: index.html  (+1 more)
RankedAuctionSys(Redis)/Part0/: README.md  index.html  package-lock.json  package.json
RankedAuctionSys(Redis)/Part1/: README.md  index.html  package-lock.json  package.json
RankedAuctionSys(Redis)/Part2/: Instruction.txt  README.md
TaintableInt/: Obfuscated  TaintableInt  a.out
TaintableInt/MultiTaintable/: Taintable.cpp
TaintableInt/Test/: Obfuscated.cpp
TaintableInt:MultiTaintableInt/: CMakeLists.txt  TaintableInt.h  Taintableex.h
TaintableInt:MultiTaintableInt/MultiTaintable/: CMakeLists.txt  Taintable_copy.h  TestPassword.cpp
TaintableInt:MultiTaintableInt/Obfuscated.dSYM/Contents/Resources/DWARF/: Obfuscated
TaintableInt:MultiTaintableInt/TaintableInt.dSYM/Contents/: Info.plist
(+138 files in other folders)
